--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Lu's Profolio</title>
+    <title>Lu Fan</title>
+    <link rel="stylesheet" href="./app/assets/stylesheets/style.css">
+    <script type="text/javascript" src='./app/assets/javascripts/bundle.js'></script>
+    <link rel="icon" type='image/png' href="https://res.cloudinary.com/ddwejrtgh/image/upload/v1523999528/logo_yzmtgw.png">
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous">
+    </script>
     <!-- <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/12.1.5/js/smooth-scroll.polyfills.min.js'></script> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> -->
