change particles.js effect for aboutComponent

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Lu Fan</title>
-    <link rel="stylesheet" href="./app/assets/stylesheets/style.css">
-    <script type="text/javascript" src='./app/assets/javascripts/bundle.js'></script>
     <link rel="icon" type='image/png' href="https://res.cloudinary.com/ddwejrtgh/image/upload/v1525644340/cutmypic_hl0ald.png">
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -17,11 +15,11 @@
           emailjs.init("user_xhneDeUMz2d3ibeSjLCz6");
        })();
     </script>
-    <!-- <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/12.1.5/js/smooth-scroll.polyfills.min.js'></script> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> -->
   </head>
   <body>
     <div id='root'></div>
+    <link rel="stylesheet" href="./app/assets/stylesheets/style.css">
+    <script type="text/javascript" src='./app/assets/javascripts/particles.min.js'></script>
+    <script type="text/javascript" src='./app/assets/javascripts/bundle.js'></script>
   </body>
 </html>
