add mobile styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Lu Fan</title>
+    <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <link rel="icon" type='image/png' href="https://res.cloudinary.com/ddwejrtgh/image/upload/v1525644340/cutmypic_hl0ald.png">
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
